# GLSL-PathTracer

./: .gitignore  CMakeLists.txt  INSTALL-LINUX.txt  INSTALL-MAC.txt  INSTALL-WIN.txt  LICENSE  PathTracer.sln  README.md
Nvidia-SBVH/: Nvidia-SBVH.vcxproj  Nvidia-SBVH.vcxproj.filters
Nvidia-SBVH/src/: Array.h  BVH.h  GPUScene.h  Sort.h  SplitBVHBuilder.cpp  SplitBVHBuilder.h  Timer.h  Util.h  linear_math.h
PathTracer/: Camera.cpp  Camera.h  Config.h  Loader.cpp  Loader.h  Main.cpp  Material.h  Mesh.cpp  Mesh.h  PathTracer.vcxproj  PathTracer.vcxproj.filters  Program.cpp  Program.h  ProgressiveRenderer.cpp  ProgressiveRenderer.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderIncludes.h  Texture.cpp  Texture.h  TiledRenderer.cpp  TiledRenderer.h  ajaxTestScene.h  boyTestScene.h  cornellTestScene.h  hdrloader.cpp  hdrloader.h  index.html
PathTracer/shaders/: AccumFrag.glsl  AccumVert.glsl  Output.glsl  OutputFrag.glsl  PathTraceProgressiveFrag.glsl  PathTraceProgressiveFragSimplified.glsl  PathTraceProgressiveVert.glsl  PathTraceTiledFrag.glsl  PathTraceTiledFrag_test.glsl  Progressive.glsl  Tiled.glsl
PathTracer/shaders/Progressive/: OutputFadeFrag.glsl  OutputVert.glsl  PathTraceFrag.glsl
PathTracer/shaders/Tiled/: OutputFrag.glsl  PathTraceFrag.glsl  PathTraceVert.glsl
PathTracer/shaders/common/: Anyhit.glsl  Closesthit.glsl  GlassBSDF.glsl  Globals.glsl  Intersection.glsl  Pathtrace.glsl  Sampling.glsl  UE4BRDF.glsl  Uniforms.glsl
PathTracer/src/: Camera.cpp  Camera.h  Config.h  GPUBVH.cpp  GPUBVH.h  Loader.cpp  Loader.h  Main.cpp  Program.cpp  Program.h  ProgressiveRenderer.cpp  ProgressiveRenderer.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TiledRenderer.cpp  TiledRenderer.h  hdrloader.cpp  hdrloader.h
PathTracer/src/shaders/Progressive/: AccumFrag.glsl  OutputFadeFrag.glsl  OutputFrag.glsl  OutputVert.glsl  PathTraceFrag.glsl  PathTraceVert.glsl
PathTracer/src/shaders/Tiled/: PathTraceFrag.glsl
assets/: Model Credits.txt  bathroom.scene  boy.scene  coffee.scene  cornell_box.scene  cornell_box2.scene  cornell_box_orig.scene  cornell_box_sphere.scene  diningroom.scene  glassBoy.scene  hyperion.scene  hyperion2.scene  hyperion_rect_lights.scene  hyperion_sphere_light.scene  rank3police.scene  spaceship.scene  staircase.scene  teapot.scene  test_odyssey.scene  test_sphere_light_inside.scene  test_sphere_light_large.scene  test_sphere_light_medium.scene  test_sphere_light_small.scene  test_volume_cube.scene  test_volume_cube_sss.scene  volume_cube.scene
assets/Figurine/: body.obj.REMOVED.git-id  head.obj.REMOVED.git-id
assets/Figurine/textures/: 01_Head_Base_Color.png.REMOVED.git-id  01_Head_Metallic.png.REMOVED.git-id  01_Head_MetallicRoughness.png.REMOVED.git-id  01_Head_Normal_DirectX.png.REMOVED.git-id  01_Head_Roughness.png.REMOVED.git-id  02_Body_Base_Color.png.REMOVED.git-id  02_Body_Metallic.png.REMOVED.git-id  02_Body_MetallicRoughness.png.REMOVED.git-id  02_Body_Roughness.png.REMOVED.git-id  03_Base_Base_Color.png.REMOVED.git-id  03_Base_Metallic.png.REMOVED.git-id  03_Base_MetallicRoughness.png.REMOVED.git-id  03_Base_Normal_DirectX.png.REMOVED.git-id  03_Base_Roughness.png.REMOVED.git-id
assets/ajax/: ajax.obj.REMOVED.git-id  sunset.hdr.REMOVED.git-id
assets/checks/: ship.scene  ship_singlelight.scene  veach.scene
assets/checks/mitsuba/: ship.xml  ship_singlelight.xml
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
buildweb/: b.bat
lib/: SBVH.lib.REMOVED.git-id
lib/Win32/: SBVH.lib  SBVH.lib.REMOVED.git-id  SOIL.lib
lib/x64/: SBVH.lib  SBVH.lib.REMOVED.git-id  SOIL.lib
screenshots/: DiningRoom.png.REMOVED.git-id  GlassMat.png.REMOVED.git-id  MeetMat_Absorption.png.REMOVED.git-id  MeetMat_Maps.png.REMOVED.git-id  ajax_materials.png.REMOVED.git-id  city.png.REMOVED.git-id  crown.png.REMOVED.git-id  dragon.png.REMOVED.git-id  panther.png.REMOVED.git-id  rank3police_color_corrected.png.REMOVED.git-id  staircase.png.REMOVED.git-id
src/: Main.cpp
src/core/: Camera.cpp  Camera.h  Config.h  Distribution.cpp  Distribution.h  EnvironmentMap.cpp  EnvironmentMap.h  Material.h  Medium.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderIncludes.h  Texture.cpp  Texture.h  TiledRenderer.cpp  TiledRenderer.h
src/loaders/: EnvironmentMap.cpp  GLTFLoader.cpp  GLTFLoader.h  Loader.cpp  Loader.cpp.bak  Loader.h  hdrloader.cpp  hdrloader.h  tinyexr.h
src/math/: Mat4.h  MathUtils.h  Vec2.h  Vec3.h  Vec4.h
src/shaders/: accumulation.glsl  output.glsl  pathtrace.glsl  preview.glsl  progressive.glsl  rawfb.glsl  realTimeDenoiser.glsl  tile.glsl  tiled.glsl  tonemap.glsl  vertex.glsl
src/shaders/common/: anyhit.glsl  anyhit.glsl.bak  brdf.glsl  closest_hit.glsl  closest_hit.glsl.bak  disney.glsl  envmap.glsl  glass.glsl  globals.glsl  globals.glsl.bak  intersection.glsl  intersection.glsl.bak  lambert.glsl  pathtrace.glsl  pathtrace.glsl.bak  sampling.glsl  uniforms.glsl  vertex.glsl
src/tests/: ajaxTestScene.h  boyTestScene.h  cornellTestScene.h
